# llm-lab

./: llm-hello-world.ipynb
LLM-HELLO_WORLD/: README.md  llm-hello-world.ipynb  pyproject.toml
llm/: router.py
llm/providers/: ollama.py  openai.py
my-first-llm-code/: base.py  llm-hello-world.ipynb  pyproject.toml  router.py
my-first-llm-code/providers/: ollama.py  openai.py
